--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -5,3 +5,14 @@ $helvetica: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 // Colors
 $primary-blue: #3598E8;
 $primary-green: #5BB84F;
+
+// Buttons
+$btn-border-radius: 0px;
+
+// Inputs
+$form-control-border-radius: 0px;
+$form-control-font-size: 15px;
+$form-control-height: 40px;
+
+// Tooltips
+$tooltip-font-size: 14px;
