Add angular spinner

--- a/app/views/registrations/_new.html.haml
+++ b/app/views/registrations/_new.html.haml
@@ -4,7 +4,11 @@
 	%h2.text-center.h4.text-transparent
 		Start a free 30 day trial. No credit card required.
 	.row.form-container
+	
+		-# Registration form
 		%form{name: 'registration.form', novalidate: true, data: {ng_controller: 'RegistrationCtrl as registration', ng_submit: 'registration.create(registration.user)'}}
+			
+			-# Error messages
 			.col-xs-12.form-errors{data: {ng_if: 'registration.form.$invalid && registration.form.$submitted'}}
 				.inner
 					%strong
@@ -20,6 +24,7 @@
 						%span{data: {ng_message: 'required'}} Please enter your password
 						%span{data: {ng_message: 'minlength'}} Password must be 5 characters or more
 				
+			-# First name field
 			.col-xs-6.form-group{data: {ng_class: '{"has-error": registration.form.firstName.$invalid && (registration.form.$submitted || registration.form.firstName.$touched), "has-success": registration.form.firstName.$valid && (registration.form.$submitted || registration.form.firstName.$touched)}'}}
 				%label.required 
 					First name
@@ -27,6 +32,8 @@
 						*
 					%span.glyphicon.glyphicon-ok{ng_show: 'registration.form.firstName.$valid && (registration.form.$submitted || registration.form.firstName.$touched)'}
 				%input.form-control{name: 'firstName', required: true, type: :text, placeholder: 'John', data: {ng_model: 'registration.user.first_name', ng_model_options: "{debounce: {'default': 250, blur: 0 }}"}}
+			
+			-# Last name field
 			.col-xs-6.form-group{data: {ng_class: '{"has-error": registration.form.lastName.$invalid && (registration.form.$submitted || registration.form.lastName.$touched), "has-success": registration.form.lastName.$valid && (registration.form.$submitted || registration.form.lastName.$touched)}'}}
 				%label.required 
 					Last name
@@ -34,13 +41,19 @@
 						*
 					%span.glyphicon.glyphicon-ok{ng_show: 'registration.form.lastName.$valid && (registration.form.$submitted || registration.form.lastName.$touched)'}
 				%input.form-control{name: 'lastName', required: true, type: :text, placeholder: 'Doe', data: {ng_model: 'registration.user.last_name', ng_model_options: "{debounce: {'default': 250, blur: 0 }}"}}
+			
+			-# Email field
 			.col-xs-12.form-group{data: {ng_class: '{"has-error": registration.form.email.$invalid && (registration.form.$submitted || registration.form.email.$touched), "has-success": registration.form.email.$valid && (registration.form.$submitted || registration.form.email.$touched)}'}}
 				%label.required 
 					Email
 					%span.asterisk
 						*
 					%span.glyphicon.glyphicon-ok{ng_show: 'registration.form.email.$valid && (registration.form.$submitted || registration.form.email.$touched)'}
-				%input.form-control{name: 'email', required: true, type: :email, placeholder: 'john@example.com', data: {ng_model: 'registration.user.email', ng_model_options: "{debounce: {'default': 250, blur: 0 }}"}}
+				%input.form-control{name: 'email', required: true, type: :email, placeholder: 'john@example.com', data: {unique: true, ng_model: 'registration.user.email', ng_model_options: "{debounce: {'default': 250, blur: 0 }}"}}
+				%span.form-error{data: {ng_show: 'registration.form.email.$error.unique'}}
+					Email is already taken
+				
+			-# Password
 			.col-xs-12.form-group{data: {ng_class: '{"has-error": registration.form.password.$invalid && (registration.form.$submitted || registration.form.password.$touched), "has-success": registration.form.password.$valid && (registration.form.$submitted || registration.form.password.$touched)}'}}
 				%label.required 
 					Password
@@ -48,6 +61,11 @@
 						*
 					%span.glyphicon.glyphicon-ok{ng_show: 'registration.form.password.$valid && (registration.form.$submitted || registration.form.password.$touched)'}
 				%input.form-control{name: 'password', required: true, type: :password, placeholder: 'Password', data: {ng_model: 'registration.user.password', ng_model_options: "{debounce: {'default': 250, blur: 0 }}", ng_minlength: 5, tooltip: 'Password must be at least 5 characters', tooltip_trigger: 'focus'}}
+			
+			-# Submit button field
 			.col-xs-12
 				%button.btn.btn-green.btn-lg.btn-block{type: :submit}
-					Create your account
+					%span{ng_hide: 'registration.loading'}
+						Create your account
+					%span{ng_show: 'registration.loading'}
+						.loading-spinner.center
