--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -2,3 +2,40 @@ html,
 body {
 	font-family: $lato;
 }
+
+.loading-spinner {
+	border-radius: 1000px;
+	height: 30px;
+	width: 30px;
+	border: 3px solid #FFF;
+	border-bottom-color: rgba(255, 255, 255, 0.40);
+	border-left-color: rgba(255, 255, 255, 0.40);
+	border-right-color: rgba(255, 255, 255, 0.40);
+	-webkit-animation: loading 750ms linear infinite;
+}
+
+@-webkit-keyframes loading {
+	from {
+		-webkit-transform: rotate(0deg);
+		-ms-transform: rotate(0deg);
+		-moz-transform: rotate(0deg);
+		-o-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	to {
+		-webkit-transform: rotate(360deg);
+		-ms-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
+		-o-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes loading {
+	from {
+		-webkit-transform: rotate(0deg);
+	}
+	to {
+		-webkit-transform: rotate(360deg);
+	}
+}
