--- a/app/assets/javascripts/app/routes.js.erb
+++ b/app/assets/javascripts/app/routes.js.erb
@@ -22,6 +22,16 @@
 					url: '/sign-up',
 					templateUrl: 'registration.html'
 				})
+				
+				.state('company', {
+					url: '/company/new',
+					templateUrl: 'new.company.html'
+				})
+				
+				.state('team', {
+					url: '/team',
+					templateUrl: 'team.html'
+				})
 			
 		});
 	
