--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,3 +12,5 @@
 		= render 'pages/home'
 		= render 'pages/pricing'
 		= render 'registrations/new'
+		= render 'companies/new'
+		= render 'companies/team'
